--- a/css/tablet.css
+++ b/css/tablet.css
@@ -28,9 +28,12 @@ header .batata-logo {
 	line-height: var(--lh-24px);
 }
 .exchange--chart--container {
-	width: 60%;
+	width: 70%;
 	margin: 0 auto;
-	display: flex;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	align-items: center;
+	justify-content: center;
 }
 .exchange-currency-table h2,
 .exchange-commission-table h2 {
@@ -43,6 +46,10 @@ header .batata-logo {
 .exchange-chart-currency .right-arrow,
 .exchange-chart-commission .left-arrow {
 	display: none;
+}
+.specs-description-container {
+	grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+	gap: 15px;
 }
 .specs-text-container h2 {
 	font-size: var(--fs-40px);
